# 3DSegmentation

./: CMakeLists.txt  ellipsoid.cpp  ellipsoid.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  pclviewer.cpp  pclviewer.h  pclviewer.ui  pcs.cpp  pcs.h  pcssegmentation.cpp  pcssegmentation.h
